--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,13 +20,17 @@ jobs:
     #if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [x86, amd64]
+        os: [ubuntu-latest, macos-latest]
+        arch: [x86, amd64, aarch64]
         exclude:
           - os: ubuntu-latest
             arch: x86
           - os: macos-latest
             arch: x86
+          - os: windows-latest
+            arch: aarch64
+          - os: macos-latest
+            arch: aarch64
 
     steps:
       - name: Checkout repo
@@ -38,6 +42,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
+          
+      - name: Set up QEMU
+        if: ${{ matrix.arch == 'aarch64' }}
+        uses: docker/setup-qemu-action@v1          
 
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
