--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -21,14 +21,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        arch: [x86, amd64, aarch64]
+        arch: [auto, aarch64]
         exclude:
-          - os: ubuntu-latest
-            arch: x86
-          - os: macos-latest
-            arch: x86
-          - os: windows-latest
-            arch: aarch64
+         # - os: ubuntu-latest
+          #  arch: x86
+          #- os: macos-latest
+           # arch: x86
+          #- os: windows-latest
+           # arch: aarch64
           - os: macos-latest
             arch: aarch64
 
