--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -17,20 +17,16 @@ jobs:
     name: Build wheels on ${{ matrix.os }} (${{ matrix.arch }})
     runs-on: ${{ matrix.os }}
     # Only build wheels when tagging (typically a release)
-    #if: startsWith(github.event.ref, 'refs/tags')
+   # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        arch: [auto, aarch64]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: [x86, amd64]
         exclude:
-         # - os: ubuntu-latest
-          #  arch: x86
-          #- os: macos-latest
-           # arch: x86
-          #- os: windows-latest
-           # arch: aarch64
+          - os: ubuntu-latest
+            arch: x86
           - os: macos-latest
-            arch: aarch64
+            arch: x86
 
     steps:
       - name: Checkout repo
@@ -42,10 +38,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
-          
-      - name: Set up QEMU
-        if: ${{ matrix.arch == 'aarch64' }}
-        uses: docker/setup-qemu-action@v1          
 
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
@@ -100,7 +92,6 @@ jobs:
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_SKIP: '*-manylinux*_i686'
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
