--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,8 +20,8 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [x86, amd64]
+        os: [ubuntu-latest]
+        arch: [aarch64]
         exclude:
           - os: ubuntu-latest
             arch: x86
@@ -38,6 +38,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
+          
+      - uses: docker/setup-qemu-action@v1
+        if: ${{ matrix.arch == 'aarch64' }}
+        name: Set up QEMU          
 
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
@@ -92,6 +96,7 @@ jobs:
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_SKIP: '*-manylinux*_i686'
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
