--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -21,8 +21,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [auto, aarch64]
+        arch: [x86, amd64, aarch64]
         exclude:
+          - os: ubuntu-latest
+            arch: x86
+          - os: macos-latest
+            arch: x86
           - os: windows-latest
             arch: aarch64
           - os: macos-latest
