--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,16 +20,18 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [x86, amd64, aarch64]
-        exclude:
+        #os: [ubuntu-latest, windows-latest, macos-latest]
+        #arch: [x86, amd64, aarch64]
+        include:
           - os: ubuntu-latest
-            arch: x86
+            arch: amd64
           - os: macos-latest
+            arch: amd64
+          - os: windows-latest
             arch: x86
           - os: windows-latest
-            arch: aarch64
-          - os: macos-latest
+            arch: amd64
+          - os: ubuntu-latest
             arch: aarch64
 
     steps:
