--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -24,9 +24,9 @@ jobs:
         #arch: [x86, amd64, aarch64]
         include:
           - os: ubuntu-latest
-            arch: amd64
+            arch: x86_64
           - os: macos-latest
-            arch: amd64
+            arch: x86_64
           - os: windows-latest
             arch: x86
           - os: windows-latest
@@ -102,7 +102,7 @@ jobs:
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_SKIP: '*-manylinux*_i686'
-          #CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
