--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -27,10 +27,10 @@ jobs:
             arch: x86_64
           - os: macos-latest
             arch: x86_64
-          - os: windows-latest
-            arch: x86
-          - os: windows-latest
-            arch: amd64
+          #- os: windows-latest
+           # arch: x86
+          #- os: windows-latest
+           # arch: amd64
           - os: ubuntu-latest
             arch: aarch64
 
