--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,19 +20,19 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        #os: [ubuntu-latest, windows-latest, macos-latest]
-        #arch: [x86, amd64, aarch64]
-        include:
-          - os: ubuntu-latest
-            arch: x86_64
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: [auto, aarch64]
+        exclude:
+         # - os: ubuntu-latest
+          #  arch: x86_64
           - os: macos-latest
-            arch: x86_64
-          #- os: windows-latest
-           # arch: x86
+            arch: aarch64
+          - os: windows-latest
+            arch: aarch64
           #- os: windows-latest
            # arch: amd64
-          - os: ubuntu-latest
-            arch: aarch64
+          #- os: ubuntu-latest
+           # arch: aarch64
 
     steps:
       - name: Checkout repo
@@ -55,7 +55,7 @@ jobs:
       - name: Install MSVC x86
         uses: ilammy/msvc-dev-cmd@v1
         with:
-          arch: x86
+          arch: auto
 
       - name: Install dependencies
         run: |
@@ -63,35 +63,18 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install -r requirements-tests.txt
       - name: Build wheels (Windows x86)
-        if: ${{ runner.os == 'Windows' && matrix.arch == 'x86'}}
+        if: ${{ runner.os == 'Windows' }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install cibuildwheel
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: 'cp37-win32 cp38-win32 cp39-win32'
+          CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
           CIBW_BUILD_VERBOSITY: 1
 
-      - name: Install MSVC amd64
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: amd64
-
-      - name: Build wheels (Windows / amd64)
-        if: ${{ runner.os == 'Windows' && matrix.arch == 'amd64'}}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install cibuildwheel
-          python -m cibuildwheel --output-dir wheelhouse
-        env:
-          CIBW_BUILD: 'cp37-win_amd64 cp38-win_amd64 cp39-win_amd64'
-          CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
-          CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
-          CIBW_TEST_COMMAND: python -m pytest {project}/tests
-          CIBW_BUILD_VERBOSITY: 1
 
       - name: Build wheels (Linux / macOS)
         if: runner.os != 'Windows'
