--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,19 +20,13 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         arch: [auto, aarch64]
         exclude:
-         # - os: ubuntu-latest
-          #  arch: x86_64
           - os: macos-latest
             arch: aarch64
-          - os: windows-latest
-            arch: aarch64
-          #- os: windows-latest
-           # arch: amd64
-          #- os: ubuntu-latest
-           # arch: aarch64
+         # - os: windows-latest
+          #  arch: aarch64
 
     steps:
       - name: Checkout repo
