--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,10 +20,12 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         arch: [auto, aarch64]
         exclude:
           - os: macos-latest
+            arch: aarch64
+          - os: windows-latest
             arch: aarch64
 
     steps:
