--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install MSVC x86
         uses: ilammy/msvc-dev-cmd@v1
         with:
-          arch: amd64
+          arch: x86
 
       - name: Install dependencies
         run: |
@@ -63,7 +63,25 @@ jobs:
           python -m pip install cibuildwheel
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: 'cp37-* cp38-* cp39-*'
+          CIBW_BUILD: 'cp37-win32 cp38-win32 cp39-win32'
+          CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
+          CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
+          CIBW_TEST_COMMAND: python -m pytest {project}/tests
+          CIBW_BUILD_VERBOSITY: 1
+
+      - name: Install MSVC amd64
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: amd64
+
+      - name: Build wheels (Windows / amd64)
+        if: ${{ runner.os == 'Windows' }}
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install cibuildwheel
+          python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_BUILD: 'cp37-win_amd64 cp38-win_amd64 cp39-win_amd64'
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
