--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -20,13 +20,13 @@ jobs:
    # if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [auto, aarch64]
-        exclude:
-          - os: windows-latest
-            arch: aarch64
-          - os: macos-latest
-            arch: aarch64
+        os: [windows-latest]
+        arch: [auto]
+        #exclude:
+          #- os: windows-latest
+           # arch: aarch64
+          #- os: macos-latest
+           # arch: aarch64
       fail-fast: false
 
     steps:
