--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -17,11 +17,11 @@ jobs:
     name: Build wheels on ${{ matrix.os }} (${{ matrix.arch }})
     runs-on: ${{ matrix.os }}
     # Only build wheels when tagging (typically a release)
-   # if: startsWith(github.event.ref, 'refs/tags')
+    if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
         os: [windows-latest]
-        arch: [auto]
+        arch: [x86, amd64]
       fail-fast: false
 
     steps:
@@ -34,10 +34,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
-          
-      - uses: docker/setup-qemu-action@v1
-        if: ${{ matrix.arch == 'aarch64' }}
-        name: Set up QEMU          
 
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
@@ -53,7 +49,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install -r requirements-tests.txt
       - name: Build wheels (Windows x86)
-        if: ${{ runner.os == 'Windows' }}
+        if: ${{ runner.os == 'Windows' && matrix.arch == 'x86'}}
         run: |
           python -m pip install --upgrade pip
           python -m pip install cibuildwheel
@@ -71,7 +67,7 @@ jobs:
           arch: amd64
 
       - name: Build wheels (Windows / amd64)
-        if: ${{ runner.os == 'Windows' }}
+        if: ${{ runner.os == 'Windows' && matrix.arch == 'amd64'}}
         run: |
           python -m pip install --upgrade pip
           python -m pip install cibuildwheel
@@ -92,7 +88,6 @@ jobs:
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_SKIP: '*-manylinux*_i686'
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
