--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -17,11 +17,16 @@ jobs:
     name: Build wheels on ${{ matrix.os }} (${{ matrix.arch }})
     runs-on: ${{ matrix.os }}
     # Only build wheels when tagging (typically a release)
-  #  if: startsWith(github.event.ref, 'refs/tags')
+    if: startsWith(github.event.ref, 'refs/tags')
     strategy:
       matrix:
-        os: [windows-latest]
-        arch: [x86, amd64]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: [auto, aarch64]
+        exclude:
+          - os: windows-latest
+            arch: aarch64
+          - os: macos-latest
+            arch: aarch64
       fail-fast: false
 
     steps:
@@ -49,7 +54,7 @@ jobs:
           python -m pip install -r requirements.txt
           python -m pip install -r requirements-tests.txt
       - name: Build wheels (Windows x86)
-        if: ${{ runner.os == 'Windows' && matrix.arch == 'x86'}}
+        if: ${{ runner.os == 'Windows' }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install cibuildwheel
@@ -67,7 +72,7 @@ jobs:
           arch: amd64
 
       - name: Build wheels (Windows / amd64)
-        if: ${{ runner.os == 'Windows' && matrix.arch == 'amd64'}}
+        if: ${{ runner.os == 'Windows' }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install cibuildwheel
@@ -88,6 +93,7 @@ jobs:
         env:
           CIBW_BUILD: 'cp37-* cp38-* cp39-*'
           CIBW_SKIP: '*-manylinux*_i686'
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
