--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -39,32 +39,35 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
-
+      - name: Set up QEMU
+        if: ${{ matrix.arch == 'aarch64' }}
+        uses: docker/setup-qemu-action@v1
+        
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
 
-      - name: Install MSVC x86
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x86
+ #     - name: Install MSVC x86
+  #      uses: ilammy/msvc-dev-cmd@v1
+   #     with:
+    #      arch: x86
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-          python -m pip install -r requirements-tests.txt
-      - name: Build wheels (Windows x86)
-        if: ${{ runner.os == 'Windows' }}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install cibuildwheel
-          python -m cibuildwheel --output-dir wheelhouse
-        env:
-          CIBW_BUILD: 'cp37-win32 cp38-win32 cp39-win32'
-          CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
-          CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
-          CIBW_TEST_COMMAND: python -m pytest {project}/tests
-          CIBW_BUILD_VERBOSITY: 1
+#      - name: Install dependencies
+ #       run: |
+  #        python -m pip install --upgrade pip
+   #       python -m pip install -r requirements.txt
+    #      python -m pip install -r requirements-tests.txt
+  #    - name: Build wheels (Windows x86)
+   #     if: ${{ runner.os == 'Windows' }}
+    #    run: |
+     #     python -m pip install --upgrade pip
+      #    python -m pip install cibuildwheel
+       #   python -m cibuildwheel --output-dir wheelhouse
+       # env:
+        #  CIBW_BUILD: 'cp37-win32 cp38-win32 cp39-win32'
+         # CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
+          #CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
+          #CIBW_TEST_COMMAND: python -m pytest {project}/tests
+          #CIBW_BUILD_VERBOSITY: 1
 
       - name: Install MSVC amd64
         uses: ilammy/msvc-dev-cmd@v1
