--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -23,8 +23,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         arch: [auto, aarch64]
         exclude:
-          - os: windows-latest
-            arch: aarch64
+         # - os: windows-latest
+          #  arch: aarch64
           - os: macos-latest
             arch: aarch64
       fail-fast: false
@@ -46,28 +46,10 @@ jobs:
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
 
- #     - name: Install MSVC x86
-  #      uses: ilammy/msvc-dev-cmd@v1
-   #     with:
-    #      arch: x86
-
-#      - name: Install dependencies
- #       run: |
-  #        python -m pip install --upgrade pip
-   #       python -m pip install -r requirements.txt
-    #      python -m pip install -r requirements-tests.txt
-  #    - name: Build wheels (Windows x86)
-   #     if: ${{ runner.os == 'Windows' }}
-    #    run: |
-     #     python -m pip install --upgrade pip
-      #    python -m pip install cibuildwheel
-       #   python -m cibuildwheel --output-dir wheelhouse
-       # env:
-        #  CIBW_BUILD: 'cp37-win32 cp38-win32 cp39-win32'
-         # CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
-          #CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
-          #CIBW_TEST_COMMAND: python -m pytest {project}/tests
-          #CIBW_BUILD_VERBOSITY: 1
+      - name: Install MSVC x86
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86
 
       - name: Install MSVC amd64
         uses: ilammy/msvc-dev-cmd@v1
@@ -81,7 +63,8 @@ jobs:
           python -m pip install cibuildwheel
           python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: 'cp37-win_amd64 cp38-win_amd64 cp39-win_amd64'
+          CIBW_BUILD: 'cp37-* cp38-* cp39-*'
+          CIBW_ARCHS: ${{ matrix.arch }}          
           CIBW_BEFORE_BUILD: python -m pip install -r requirements.txt
           CIBW_BEFORE_TEST: python -m pip install -r requirements-tests.txt
           CIBW_TEST_COMMAND: python -m pytest {project}/tests
