--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -23,8 +23,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         arch: [auto, aarch64]
         exclude:
-         # - os: windows-latest
-          #  arch: aarch64
+          - os: windows-latest
+            arch: aarch64
           - os: macos-latest
             arch: aarch64
       fail-fast: false
@@ -56,7 +56,7 @@ jobs:
         with:
           arch: amd64
 
-      - name: Build wheels (Windows / amd64)
+      - name: Build wheels (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
           python -m pip install --upgrade pip
