--- a/.github/workflows/cibuildwheels.yml
+++ b/.github/workflows/cibuildwheels.yml
@@ -56,6 +56,12 @@ jobs:
         with:
           arch: amd64
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pip install -r requirements-tests.txt
+
       - name: Build wheels (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
